tools/tests/errors/tensor_complex_grad.ki
var T = import("tensor")
# Complex tensors cannot track gradients per docs — throws
discard T.zeros([2, 2], dtype = "Complex", requiresgrad = True)
